Added navbar and bootstrap js

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
- 
+// Keep this order!
 @import "bootstrap-sprockets";
 @import "bootstrap";
+// Place custom css depending on bootstrap variables here!
