Added font awesome gem and logo to navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,4 +16,6 @@
 // Keep this order!
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 // Place custom css depending on bootstrap variables here!
