--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,11 @@
 </nav>
 
 <div class="container">
-      <%= yield %>
+  <% flash.each do |key, value| %>
+  <%= content_tag :div, value, class: "alert alert-#{key}" %>
+    <% end %>
+    
+  <%= yield %>
 </div>
 
 </body>
